--- a/app/src/main/res/layout/activity_chest.xml
+++ b/app/src/main/res/layout/activity_chest.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="241dp"
-        android:layout_height="81dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -17,15 +17,15 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
-        android:layout_marginTop="98dp"
-        android:layout_marginEnd="85dp"
-        android:layout_marginRight="85dp"
+        android:layout_marginTop="147dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
         android:text="Give me a random chest workout!" />
 
     <TextView
         android:id="@+id/chestWorkout"
-        android:layout_width="374dp"
-        android:layout_height="465dp"
+        android:layout_width="378dp"
+        android:layout_height="347dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -34,4 +34,35 @@
         android:layout_marginTop="235dp"
         android:text="Chest workout will be displayed here after pressing the button above."
         android:textSize="20dp" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginTop="65dp"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="CHEST"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/chestDemo"
+        android:layout_width="372dp"
+        android:layout_height="44dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginBottom="31dp"
+        android:gravity="center"
+        android:textColor="#0000ff"
+        android:text="Click for exercise demonstrations!"
+        android:textSize="15dp" />
 </RelativeLayout>
