--- a/app/src/main/res/layout/activity_chest_demo.xml
+++ b/app/src/main/res/layout/activity_chest_demo.xml
@@ -21,15 +21,15 @@
 
     <Button
         android:id="@+id/playButton"
-        android:layout_width="136dp"
-        android:layout_height="81dp"
+        android:layout_width="144dp"
+        android:layout_height="60dp"
         android:layout_below="@id/youtubePlayer"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="138dp"
-        android:layout_marginLeft="138dp"
-        android:layout_marginTop="380dp"
+        android:layout_marginStart="131dp"
+        android:layout_marginLeft="131dp"
+        android:layout_marginTop="370dp"
         android:text="PLAY" />
 
     <TextView
@@ -39,10 +39,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="47dp"
-        android:layout_marginLeft="47dp"
-        android:layout_marginTop="537dp"
-        android:text="Demonstrations for the given exercises can be found in this compiled playlist."
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="469dp"
+        android:text="Demonstrations for the given workout are given in the correct order inside the playlist above."
         android:textSize="20dp" />
 
     <TextView
@@ -56,6 +56,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="21dp"
         android:gravity="center"
-        android:text="CHEST EXERCISES DEMONSTRATIONS"
+        android:text="CHEST WORKOUT 1 EXERCISE DEMONSTRATIONS"
         android:textSize="20dp" />
 </RelativeLayout>
