--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginLeft="44dp"
         android:layout_marginTop="337dp"
-        android:text="Kenton's Fitness App"
+        android:text="Workout Like Kenton"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="30dp"
